force-app/main/default/objects/Loop__DDP_Integration_Option__c/Loop__DDP_Integration_Option__c.object-meta.xml
<CustomObject>
    <description>Delivery Options for DocGen Packages</description>
    <label>Delivery Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>