force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Content_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Loop__Content_Workspace__c</fullName>
    <formula>IF ( OR( ISPICKVAL( Loop__Attach_As__c , &quot;Content&quot;) , ISPICKVAL( Loop__Attach_As__c , &quot;Content - User Selected&quot;) ) , IF ( Loop__WorkspaceId__c = &quot;&quot; , &quot;Personal&quot; , HYPERLINK(&quot;/&quot; &amp;  Loop__WorkspaceId__c , IF ( Loop__WorkspaceName__c = &quot;&quot; , Loop__WorkspaceId__c , Loop__WorkspaceName__c ) ) ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpContentWorkspace?type=workspace&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; , &quot;None&quot;)</formula>
    <label>Content Library</label>
    <type>Text</type>
</CustomField>