force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__DDP__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP__c</fullName>
    <label>DocGen Package</label>
    <referenceTo>Loop__DDP__c</referenceTo>
    <relationshipName>Custom_Integration_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>