force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Disable_Wet_Sign__c.field-meta.xml
<CustomField>
    <fullName>Loop__Disable_Wet_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This option prevents all recipients from using the Print, Sign, and Fax option during the signing process.</inlineHelpText>
    <label>Disable Sign on Paper</label>
    <type>Checkbox</type>
</CustomField>