force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__dsReminderDelay__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsReminderDelay__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Send Reminder in # days. 0 days will not send a reminder.</inlineHelpText>
    <label>Reminder Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>