force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__dsSubject__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsSubject__c</fullName>
    <inlineHelpText>Use the Field Tagger to make this dynamic. Examples: &quot;Quote &lt;&lt;Opportunity_Quote_Num&gt;&gt;&quot; or &quot;&lt;&lt;Account_Name&gt;&gt; Proposal&quot;.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>