force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Loop__Email_Template__c</fullName>
    <formula>IF(Loop__Template__c=&quot;&quot;, IF( RecordType.DeveloperName = &quot;SMTPService&quot;, &quot;Use Subject and Email Text fields below or &quot;, &quot;&quot; ) &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?cioId=&quot; &amp; Id &amp; &quot;&amp;ddpId=&quot; &amp; Loop__DDP__c, &quot;Select Email Template&quot;,&quot;_self&quot;),IF(BEGINS(Loop__Template__c,&quot;00X&quot;), HYPERLINK(&quot;/&quot; &amp; Loop__Template__c &amp; &quot;/s?id=&quot; &amp; Loop__Template__c &amp; &quot;&amp;previewMode=1&quot;, IMAGE(&quot;/img/icon/mail16.png&quot;, &quot;Preview&quot;) &amp; &quot; Preview&quot;,&quot;_blank&quot;), HYPERLINK(&quot;/&quot; &amp; Loop__DDP_File_Template__c, IMAGE(&quot;/img/icon/mail16.png&quot;, &quot;Preview&quot;) &amp; &quot; Preview&quot;,&quot;_blank&quot;)) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?cioId=&quot; &amp; Id &amp; &quot;&amp;ddpId=&quot; &amp; Loop__DDP__c, &quot;[Change]&quot;,&quot;_self&quot;)&amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?cioId=&quot; &amp; Id &amp; &quot;&amp;ic=None&quot;, &quot;[None]&quot;,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use a DocGen Package File or Salesforce Email Template for email deliveries.</inlineHelpText>
    <label>Email Template</label>
    <type>Text</type>
</CustomField>