force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Enable_Revisions__c.field-meta.xml
<CustomField>
    <fullName>Loop__Enable_Revisions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow 1st recipient to suggest revisions</label>
    <type>Checkbox</type>
</CustomField>