force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Hosted_Signing__c.field-meta.xml
<CustomField>
    <fullName>Loop__Hosted_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host Signing for the First Signer</label>
    <type>Checkbox</type>
</CustomField>