force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Language__c.field-meta.xml
<CustomField>
    <fullName>Loop__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English (United States)</fullName>
                <default>true</default>
                <label>English (United States)</label>
            </value>
            <value>
                <fullName>French (France)</fullName>
            </value>
            <value>
                <fullName>German (Germany)</fullName>
            </value>
            <value>
                <fullName>Russian (Russia)</fullName>
            </value>
            <value>
                <fullName>Italian (Italy)</fullName>
            </value>
            <value>
                <fullName>Dutch (Netherlands)</fullName>
            </value>
            <value>
                <fullName>Finnish (Finland)</fullName>
            </value>
            <value>
                <fullName>Danish (Denmark)</fullName>
            </value>
            <value>
                <fullName>Swedish (Sweden)</fullName>
            </value>
            <value>
                <fullName>Spanish (Spain)</fullName>
            </value>
            <value>
                <fullName>Norwegian (Norway)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Portugal)</fullName>
            </value>
            <value>
                <fullName>Icelandic (Iceland)</fullName>
            </value>
            <value>
                <fullName>Japanese (Japan)</fullName>
            </value>
            <value>
                <fullName>Chinese Simplified (China)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>