force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Order__c.field-meta.xml
<CustomField>
    <fullName>Loop__Order__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>