force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Output__c.field-meta.xml
<CustomField>
    <fullName>Loop__Output__c</fullName>
    <label>Document Output Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>Separate PDFs</fullName>
            </value>
            <value>
                <fullName>Originals</fullName>
            </value>
            <value>
                <fullName>PDF and Originals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>