force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__PDF_Option__c.field-meta.xml
<CustomField>
    <fullName>Loop__PDF_Option__c</fullName>
    <inlineHelpText>If no option is selected, the default is Enhanced.</inlineHelpText>
    <label>PDF Option</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loop__Output__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>PDF/A</fullName>
            </value>
            <value>
                <fullName>PDF/A Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>