force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__SMTP_Password__c.field-meta.xml
<CustomField>
    <fullName>Loop__SMTP_Password__c</fullName>
    <formula>&quot;***** [&quot; &amp; HYPERLINK(&quot;/apex/loop__smtpPassword?id=&quot; &amp; Id, &quot;Change&quot;, &quot;_top&quot;) &amp; &quot;]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Password</label>
    <type>Text</type>
</CustomField>