force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__SSL__c.field-meta.xml
<CustomField>
    <fullName>Loop__SSL__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, the transfer will be done over SSL.</inlineHelpText>
    <label>Secure</label>
    <type>Checkbox</type>
</CustomField>