force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Storage_Data__c.field-meta.xml
<CustomField>
    <fullName>Loop__Storage_Data__c</fullName>
    <label>Storage Data</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>