force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Type__c.field-meta.xml
<CustomField>
    <fullName>Loop__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Area Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>