force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__AssureSign.recordType-meta.xml
<RecordType>
    <fullName>Loop__AssureSign</fullName>
    <active>true</active>
    <description>Create an option to route this DocGen Package to Nintex eSign</description>
    <label>Nintex eSign</label>
</RecordType>