force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Download.recordType-meta.xml
<RecordType>
    <fullName>Loop__Download</fullName>
    <active>true</active>
    <description>Create an option to download this DocGen Package</description>
    <label>Download</label>
</RecordType>