force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__e_SignLive.recordType-meta.xml
<RecordType>
    <fullName>Loop__e_SignLive</fullName>
    <active>true</active>
    <description>Create an option to route this DocGen Package to OneSpan Sign</description>
    <label>OneSpan Sign</label>
</RecordType>