force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__EchoSign.recordType-meta.xml
<RecordType>
    <fullName>Loop__EchoSign</fullName>
    <active>true</active>
    <description>Create an option to route this DocGen Package to Adobe Sign</description>
    <label>Adobe Sign</label>
</RecordType>