force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Email.recordType-meta.xml
<RecordType>
    <fullName>Loop__Email</fullName>
    <active>true</active>
    <description>Create a Delivery Option to route the DocGen Package via email.</description>
    <label>Email</label>
</RecordType>