force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__HTTP_Service.recordType-meta.xml
<RecordType>
    <fullName>Loop__HTTP_Service</fullName>
    <active>true</active>
    <description>Create an option to route this DocGen Package to any HTTP Service</description>
    <label>HTTP Service</label>
</RecordType>