force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Lob.recordType-meta.xml
<RecordType>
    <fullName>Loop__Lob</fullName>
    <active>false</active>
    <description>Create an option to route this DocGen Package to Lob</description>
    <label>Lob (Deprecated)</label>
</RecordType>