force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__NWC_External_Start.recordType-meta.xml
<RecordType>
    <fullName>Loop__NWC_External_Start</fullName>
    <active>true</active>
    <description>Create an option to route this DocGen Package to a Nintex Workflow Cloud External Start workflow</description>
    <label>Start Nintex Workflow</label>
</RecordType>