force-app/main/default/objects/Loop__DDP_Integration_Option__c/validationRules/Loop__Deprecate_Lob.validationRule-meta.xml
<ValidationRule>
    <fullName>Loop__Deprecate_Lob</fullName>
    <active>true</active>
    <errorConditionFormula>$RecordType.DeveloperName == &quot;Lob&quot;</errorConditionFormula>
    <errorMessage>The Lob record type is deprecated.</errorMessage>
</ValidationRule>